# g4_mag_cource_proj

./: CMakeLists.txt  init_vis.mac  main.cpp  vis.mac
include/: ActionInitialization.h  DetectorConstruction.h  EventAction.h  PrimaryGeneratorAction.h  RunAction.h  SensitiveDetector.h
src/: ActionInitialization.cpp  DetectorConstruction.cpp  EventAction.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  SensitiveDetector.cpp
